<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCourseActivity"
    tools:layout_editor_absoluteY="81dp">

    <CheckBox
        android:id="@+id/course_elective"
        android:layout_width="180dp"
        android:layout_height="69dp"
        android:layout_marginEnd="16dp"
        android:checked="false"
        android:text="@string/course_elective"
        app:layout_constraintBaseline_toBaselineOf="@+id/course_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/course_name" />

    <EditText
        android:id="@+id/course_year"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="78dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/course_year"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toStartOf="@+id/course_term"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_name" />

    <EditText
        android:id="@+id/course_ects"
        android:layout_width="168dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/course_ects"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toStartOf="@+id/course_grade"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_year" />

    <EditText
        android:id="@+id/course_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/course_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/course_elective"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/course_term"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/course_term"
        android:inputType="numberSigned"
        app:layout_constraintBaseline_toBaselineOf="@+id/course_year"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_sendtodb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_grade" />

    <EditText
        android:id="@+id/course_grade"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/course_grade"
        android:inputType="none|numberSigned|numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/course_ects"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/course_ects" />

</android.support.constraint.ConstraintLayout>